# STAS-Security-Timeline-Security-Suite-

./: CMakeLists.txt  README.md  requirements.txt
data/: ai_analyst_config.example.json  attack_rules.json  import_capability_rules.json  threat_intel_config.example.json
src/cpp/: attack_mapper.cpp  attack_mapper.h  autorun_detector.cpp  dynamic_timeline.cpp  dynamic_timeline.h  import_profiler.cpp  import_profiler.h  ioc_extractor.cpp  ioc_extractor.h  main.cpp  pe_structs.h  sandbox.cpp  sqlite_db.cpp  static_analysis.cpp  static_analysis.h
src/python/: ai_analyst_narrator.py  behavior_analyzer.py  campaign_correlation.py  dashboard.py  detection_rule_generator.py  threat_intel_enricher.py  timeline_widget.py
